-- 0.5.0 -- 
: Fixed a bug with the bug history update.
: Added web-based installation.
: Added on option for choosing whether bugs can be changed only by the bug
  reporter, bug owner, managers, or admins. 

-- 0.4.0 -- 18 Oct 2001
: Improved the CSS file to make choosing different color schemes easier.
: Consolidated the two separate templates directories into one tree.
: Fixed a bug with the OS table creation.
: Moved configuration information to the database; dropped the configure script.
: Added the ability to search by login as well as email.
: First release of documentation.

-- 0.3.3 -- 2 Oct 2001
: Added the ability to enter cvs:filename.ext or cvs:path/filename.ext:v.vv
  into the bug comments and have that linked to a CVS web interface.
: Fixed bugs with project administration, account creation, and the initial 
  database installation.

-- 0.3.2 -- 28 Sep 2001
: Added patch and patch instructions for page.inc (in PHPlib).
: Tried to make the configure script a little more portable.
: Users can now add CCs to bug change notifications.
: Fixed some bugs with bug updating.

-- 0.3.1 -- 17 Sep 2001
: Fixed the perm and group checks.
: Fixed a bug when selecting an OS in the bug query.
: Included the latest options in the configure script.

-- 0.3.0 -- 15 Sep 2001
: Converted database schema to lower-case to ease DB portability.
: Added postgres table creation schema.
: Added the option to color rows in the bug list according to severity.
: Changed the columns in the bug list to be dynamic and user-configurable.
: Improved the configure script and added the configure_db script.
: Changed the user - group - permission scheme.
: Improved project creation in the admin tools.
: Added French, Russian, Norwegian, Swedish, German and Portuguese translations.
: Added option for the login name to not be the email address.
: Added the option to use a table name prefix (like phpbt_) in the database.