@@ -191,7 +191,10 @@
 	</tr>
 </table>
 </form>
-<a href="{me}?op=history&bugid={bugid}">View bug activity</a>
+
+<b><a href="{me}?op=history&bugid={bugid}">View bug activity</a></b> | 
+<b><a href="{me}?op=print&&bugid={bugid}">Printable view</a></b>
+
 <br>
 <br>
 <table border="0" cellpadding="2" cellspacing="0" width="640">
